--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,6 +1,24 @@
+:root {
+    --navbar-height: 3.5rem;
+}
+
 * {
     margin: 0;
     padding: 0;
     text-decoration: none;
     font-family: 'Open Sans', Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+}
+
+::-webkit-scrollbar {
+    background-color: #000000;
+    width: 0.64rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #222222;
+    border-radius: 5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #666666;
 }
