--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -22,3 +22,9 @@
 ::-webkit-scrollbar-thumb:hover {
     background-color: #666666;
 }
+
+.sticky {
+    top: 0;
+    position: sticky;
+    z-index: 1000;
+}
