--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -1,16 +1,12 @@
 @import url(../stylesheets/style.css);
 
 #landing {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100vw;
-  height: 100hw;
+  height: calc(100vh - var(--navbar-height));
   position: relative;
-}
-
-.heading {
-  text-align: center;
-  padding: 4rem;
-  color: white;
-  font-size: 6vw;
 }
 
 .backgroundImage {
@@ -33,47 +29,120 @@
   background-color: rgba(0, 0, 0, 0.85);
 }
 
-.phoneImage {
-  height: 79vh;
+.heading-wrap {
+  display: flex;
+  position: relative;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile-main-heading {
+  display: block;
+  position: relative;
+  text-align: left;
+  color: white;
+  font-size: 7vh;
+  line-height: 7vh;
+  text-shadow: 0.1rem 0.2rem 0.4rem rgba(0, 0, 0, 0.75);
+}
+
+.desktop-main-heading {
   position: absolute;
-  top: 21vh;
-  right: 0;
+  display: none;
+}
+
+.phoneImage {
+  height: 36vh;
+  max-width: 100vw;
+  position: absolute;
+  top: 18vh;
   z-index: -1;
 }
 
-@media only screen and (min-width: 600px) {
+.landing-subheading {
+  color: white;
+  width: 90vw;
+  max-width: 20rem;
+  margin-top: 30vh;
+  font-size: 4vh;
+  text-align: center;
+  text-shadow: 0.1rem -0.2rem 0.4rem rgba(0, 0, 0, 0.75);
+}
+
+.landing-text {
+  color: white;
+  font-size: 2.5vh;
+  width: 90vw;
+  max-width: 20rem;
+  margin-top: 2vh;
+}
+
+button {
+  margin-top: 3vh;
+  color: white;
+  font-size: 2.5vh;
+  font-weight: bold;
+  border: solid 3px white;
+  border-radius: 10vh;
+  width: 20vh;
+  height: 6vh;
+  background: none;
+}
+
+button:hover {
+  cursor: pointer;
+  box-shadow: 0 0 0.5rem 0.1rem rgba(255, 255, 255, 0.85);
+}
+
+@media only screen and (min-height: 870px) {
+
+  .landing-subheading {
+    max-width: 28rem;
+  }
+
+  .landing-text {
+    max-width: 27rem;
+  }
+
+}
+
+@media only screen and (min-height: 1200px) {
+
+  .landing-subheading {
+    max-width: 34rem;
+    font-size: 3.6rem;
+  }
+
+  .landing-text {
+    max-width: 32rem;
+    font-size: 2rem;
+  }
+
+}
+
+@media only screen and (min-aspect-ratio: 14/9) {
 
   #landing {
+    align-items: start;
     width: 100vw;
-    height: 100hw;
+    height: 100vh;
     position: relative;
   }
+
+  .mobile-main-heading {
+    position: absolute;
+    display: none;
+  }
   
-  .heading {
+  .desktop-main-heading {
+    display: block;
+    position: relative;
     text-align: center;
-    padding: 4rem;
+    margin-top: 4rem;
     color: white;
-    font-size: 6vw;
-  }
-  
-  .backgroundImage {
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    position: absolute;
-    overflow: hidden;
-    z-index: -1;
-  }
-  
-  .backgroundOverlay {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-    background-color: rgba(0, 0, 0, 0.85);
+    font-size: 7vw;
+    text-shadow: 0.1rem 0.2rem 0.4rem rgba(0, 0, 0, 0.75);
   }
   
   .phoneImage {
@@ -84,5 +153,28 @@
     z-index: -1;
   }
   
+  .landing-subheading {
+    margin: 12vh 0 0 10vw;
+    font-size: 3vw;
+    max-width: 50vw;
+    text-align: start;
+  }
+
+  .landing-text {
+    margin: 0 10vw;
+    font-weight: lighter;
+    font-size: 2vw;
+    max-width: 40vw;
+    margin-top: 1vh;
+  }
+
+  button {
+    margin: 0 25vw;
+    margin-top: 3vw;
+    font-size: 2vw;
+    width: 14vw;
+    height: 4vw;
+    border-radius: 10vw;
+  }
 
 }
