--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -4,13 +4,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - var(--navbar-height));
   position: relative;
 }
 
 .backgroundImage {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   position: absolute;
@@ -32,7 +32,7 @@
 .heading-wrap {
   display: flex;
   position: relative;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
@@ -54,7 +54,7 @@
 
 .phoneImage {
   height: 36vh;
-  max-width: 100vw;
+  max-width: 100%;
   position: absolute;
   top: 18vh;
   z-index: -1;
@@ -83,7 +83,7 @@ button {
   color: white;
   font-size: 2.5vh;
   font-weight: bold;
-  border: solid 3px white;
+  border: solid 0.2rem white;
   border-radius: 10vh;
   width: 20vh;
   height: 6vh;
@@ -92,7 +92,50 @@ button {
 
 button:hover {
   cursor: pointer;
-  box-shadow: 0 0 0.5rem 0.1rem rgba(255, 255, 255, 0.85);
+  box-shadow: 0 0 0.5rem 0.2rem rgba(255, 255, 255, 0.85);
+}
+
+.stats-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-height: 50vh;
+}
+
+.image-container {
+  display: flex;
+  width: 100%;
+  max-height: 50vh;
+  overflow: hidden;
+}
+
+.stats-image {
+  margin-top: -4px;
+  z-index: -1;
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  filter: blur(2px);
+}
+
+.clarification {
+  font-size: 2.15vh;
+  font-weight: lighter;
+  margin-top: 20%;
+  position: absolute;
+  color: white;
+  text-shadow: 0.1rem 0.1rem 0.4rem rgba(0, 0, 0, 1);
+}
+
+.big-number {
+  margin-top: 22%;
+  position: absolute;
+  color: white;
+  font-size: 7vh;
+  font-weight: bold;
+  text-shadow: 0.1rem 0.2rem 0.8rem rgba(0, 0, 0, 0.75);
 }
 
 @media only screen and (min-height: 870px) {
@@ -121,11 +164,28 @@ button:hover {
 
 }
 
+@media only screen and (min-aspect-ratio: 1/1) {
+
+  .clarification {
+    margin-top: 19vh;
+    font-size: 3.1vh;
+    margin-left: 40%;
+    font-weight: lighter;
+  }
+
+  .big-number {
+    margin-top: 21vh;
+    font-size: 10vh;
+    margin-left: 40%;
+  }
+
+}
+
 @media only screen and (min-aspect-ratio: 14/9) {
 
   #landing {
     align-items: start;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: relative;
   }
@@ -175,6 +235,10 @@ button:hover {
     width: 14vw;
     height: 4vw;
     border-radius: 10vw;
+  }
+
+  .stats-image {
+    filter: none;
   }
 
 }
