--- a/src/stylesheets/navbar.css
+++ b/src/stylesheets/navbar.css
@@ -21,7 +21,7 @@
 
 .menu {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - var(--navbar-height));
     background-color: #111111;
     position: absolute;
@@ -30,7 +30,7 @@
 
 .mobile-menu-links {
     display: flex;
-    width: 100vw;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     list-style-type: none;
@@ -64,7 +64,7 @@
     .desktop-nav {
         display: block;
         position: absolute;
-        width: 100vw;
+        width: 100%;
         background-color: black;
         z-index: 1000;
     }
