--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -28,3 +28,20 @@
     position: sticky;
     z-index: 1000;
 }
+
+h2 {
+    font-size: 4vh;
+    margin: 2vh 0;
+}
+
+p {
+    margin: 2vh 0;
+}
+
+@media only screen and (min-aspect-ratio: 14/9) {
+
+    h2 {
+        font-size: 4vw;
+    }
+
+}
