--- a/src/stylesheets/footer.css
+++ b/src/stylesheets/footer.css
@@ -6,13 +6,18 @@
     padding: 4vh;
 }
 
+.footer-logo {
+    width: 6vw;
+    margin-bottom: 2vh;
+}
+
 .footer-header {
     display: block;
     position: relative;
     text-align: left;
     color: white;
-    font-size: 7vh;
-    line-height: 7vh;
+    font-size: 6vw;
+    line-height: 7vw;
     text-shadow: 0.1rem 0.2rem 0.4rem rgba(0, 0, 0, 0.75);
     margin-bottom: 6vh;
 }
