--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: calc(100vh);
+  height: 100vh;
   position: relative;
 }
 
