--- a/src/stylesheets/quiz.css
+++ b/src/stylesheets/quiz.css
@@ -74,6 +74,11 @@
     background: none;
 }
 
+.submit-button:hover {
+    cursor: pointer;
+    box-shadow: 0 0 0.5rem 0rem rgba(0, 0, 0, 0.85);
+}
+
 @media only screen and (min-aspect-ratio: 14/9) {
 
     .week-input {
